<resources>
    <string name="hello">Hello World, SplashScreen!</string>
    <string name="Simobi_app_name">Bank Sinarmas</string>
    <string name="app_version">4</string>
    <string name="send_otp"><u>Click here to resend OTP</u></string>
    <string name="source_packet_code">2</string>
    <string name="bsim">BSIM</string>
    <string name="toc">Terms &amp; Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="test" />
	<string name="welcome">Welcome!</string>
	<string name="mpin">mPIN</string>
	<string name="nophone">Mobile Phone Number </string>
    <string name="eng_simobiplus_exist">You have SimobiPlus on your phone</string>
    <string name="eng_simobiplus_doesntexist">You dont have SimobiPlus on your phone</string>
    <string name="eng_register_now"> REGISTER NOW </string>
    <string name="eng_install_now"> INSTALL NOW </string>
    <string name="eng_login"> Login </string>
    <string name="eng_activation"> Activation </string>
    <string name="eng_activationDisclosure"> Terms and conditions</string>
    <string name="eng_languageSetting"> ChangeLangauge </string>
    <string name="eng_fundTransfer"> Transfer </string>
    <string name="eng_payment"> Payment </string>
    <string name="eng_purchase">  Purchase </string>
    <string name="eng_myaccont"> Account </string>
    <string name="eng_Flashiz"> Pay by QR </string>
    <string name="eng_promo"> Promo\nPay by QR </string>
    <string name="eng_resend_otp"> Resend otp </string>
    <string name="eng_tosmartfren"> To Smartfren </string>
    <string name="eng_menuBankSinarmas"> Bank Sinarmas </string>
    <string name="eng_toBankSinarmas"> Transfer to Bank Sinarmas </string>
    <string name="eng_menubankList"> Other Bank </string>
    <string name="eng_bankList"> Other Bank List </string>
    <string name="eng_toUangku"> Transfer to UANGKU </string>
    <string name="eng_destinationAccountNum"> Destination account number</string>
    <string name="eng_toOtherBank">Other Bank</string>
    <string name="eng_confirm"> Confirm </string>
    <string name="eng_changePin"> Change mPIN </string>
    <string name="eng_oldPin"> Old mPIN </string>
    <string name="eng_newPin"> New mPIN </string>
    <string name="eng_confimPin"> Confirm mPIN </string>
    <string name="eng_checkBalance">  Balance </string>
    <string name="eng_history"> History</string>
    <string name="eng_paymentDetails"> Payment details </string>
    <string name="eng_transferDetails"> Transfer details </string>
    <string name="eng_purchaseDetails"> Prepaid details </string>
    <string name="eng_credit_AC_No"> Destination account number </string>
    <string name="eng_destnatin_mdn"> Destination mobile phone number </string>
    <string name="eng_customerName"> Account Owner </string>
    <string name="eng_destinationBank"> Destination bank </string>
    <string name="eng_destinationNumber"> Destination number </string>
    <string name="eng_amount"> Amount </string>
    <string name="eng_mobileNumber">  Mobile number  </string>
    <string name="eng_paymentCategory"> Payment category </string>
    <string name="eng_paymentProvider"> Biller name </string>
    <string name="eng_paymentType"> Payment Type </string>
    <string name="eng_purchaseCategory"> Prepaid Category </string>
    <string name="eng_purchaseProvider"> Biller Name </string>
    <string name="eng_purchaseType"> Prepaid Type </string>
    <string name="eng_invoiceNumber"> Telephone Number</string>
    <string name="eng_result"> Summary </string>
    <string name="eng_reactivation"> Reactivation </string>
    <string name="eng_resetPin"> Reset mPIN </string>
    <string name="eng_last3Transactions"> History </string>
    <string name="eng_clickHereToResend"> Click here to resend OTP </string>
    <string name="eng_serverNotRespond"> Dear Customer,\n currently you are not connected to Bank Sinarmas server. Please try again later. </string>
    <string name="eng_enterValidMobile"> Please enter the valid mobile number </string>
    <string name="eng_pinLength"> mPIN should be 6 digits </string>
    <string name="eng_LoginpinLength"> mPIN should be 6 digits. If your mPIN is less than 6 digits, please change your mPIN to 6 digit at the nearest Bank Sinarmas ATM </string>
    <string name="eng_confirmPinLenth"> Confirm mPIN should be 6 digits. </string>
    <string name="eng_pinActivation">mPIN should be 6 digits</string>
    <string name="eng_fieldsNotEmpty"> Fields can not be empty </string>
    <string name="eng_loading"> Loading.... </string>
    <string name="eng_mPinNotMatch"> mPIN do not match. Please enter same mPIN in both fields and retry. </string>
    <string name="eng_transactionFail"> Dear Customer,\n Transaction failed due to sms not received.Please try again.</string>
    <string name="eng_checkSMS"> Please check your SMS for OTP </string>
    <string name="eng_contactCustomerCare"> Dear user, \nyour mbanking account is active. If you forget your MPIN, please contact customer care to reset your MPIN. </string>
    <string name="eng_updateText"> A new version of this application is available at. Updating is suggested </string>
    <string name="eng_updatedDownload"> Dear Customer,\n The updated version cannot be downloaded now.Please try again later </string>
    <string name="eng_availableDenoms"> Available denom are: </string>
    <string name="eng_bankSinarmasCare"> Bank Sinarmas Care </string>
    <string name="eng_companyWebsite"> Company Website </string>
    <string name="eng_mainUsat"> Mail us at </string>
    <string name="eng_contactUs"> Contact us </string>
    <string name="eng_cancel"> Cancel </string>
    <string name="eng_submit"> Next </string>
    <string name="eng_agree"> Agree </string>
    <string name="eng_next"> Next </string>
    <string name="eng_languageSelection"> Language </string>
    <string name="eng_chooseLanguage"> Choose your language </string>
    <string name="eng_otherAmount"> Please input payment amount </string>
    <string name="eng_appTimeout"> Please wait while your transaction is being processed. Please check your transaction history to see this transaction status.</string>
    <string name="eng_noInterent">Dear Customer,\n currently you are not connected to Bank Sinarmas server. Please try again later. </string>
    <string name="eng_otprequired_title">Code Verification</string>
    <string name="eng_otprequired_desc_1">Please wait while we are doing automatic code verification to the number : </string>
    <string name="eng_otprequired_desc_2"> or please enter the code manually if automatic verification is failed.</string>
    <string name="eng_otpfailed">Code Verification Failed</string>
	<string name="eng_welcome">Welcome! </string>
    <string name="eng_desc_otpfailed">Please enter the code within specified time limit."</string>
    <string name="eng_incorrectotp">You have entered incorrect code. Please try again and ensure that you  enter the correct code.</string>
    <string name="eng_forcechangepin">Please update your Simobi Application before performing transaction</string>
    <string name="eng_changepin">Please change your mPIN before performing transaction</string>
    <string name="eng_emptymdn">Please provide phone number</string>
    <string name="eng_emptympin">Please provide mPIN</string>
    <string name="eng_loginagain">Please login again</string>
    <string name="eng_resendotp_messages">Please make sure the phone number is correct. The OTP code has been resend to your number</string>
    <string name="bahasa_login"> Login </string>
    <string name="bahasa_activation"> Aktivasi  </string>
    <string name="bahasa_activationDisclosure"> Syarat Dan Ketentuan </string>
    <string name="bahasa_resendotp_messages">Pastikan nomor handphone anda sudah benar. Kami telah mengirimkan OTP kembali</string>
    <string name="bahasa_languageSetting"> Ganti Bahasa </string>
    <string name="bahasa_fundTransfer"> Transfer </string>
    <string name="bahasa_payment"> Pembayaran </string>
    <string name="bahasa_purchase"> Pembelian </string>
    <string name="bahasa_myaccont"> Rekening </string>
    <string name="bahasa_Flashiz"> Bayar Pakai QR </string>
    <string name="bahasa_promo"> Promo\nBayar Pakai QR </string>
    <string name="bahasa_resend_otp"> Kirim Ulang OTP </string>
    <string name="bahasa_tosmartfren"> Nomor Smartfren </string>
    <string name="bahasa_menuBankSinarmas"> Bank Sinarmas </string>
    <string name="bahasa_toBankSinarmas"> Transfer ke Bank Sinarmas </string>
    <string name="bahasa_menubankList"> Bank Lain </string>
    <string name="bahasa_bankList"> Daftar Bank Lain </string>
    <string name="bahasa_destinationAccountNum"> Nomor Rekening Tujuan </string>
    <string name="bahasa_toOtherBank"> Bank Lain </string>
    <string name="bahasa_toUangku"> Transfer ke UANGKU </string>
    <string name="bahasa_confirm"> Konfirmasi </string>
    <string name="bahasa_newPin"> mPIN Baru </string>
    <string name="bahasa_confimPin"> Konfirmasi mPIN </string>
    <string name="bahasa_checkBalance"> Saldo </string>
    <string name="bahasa_history"> Transaksi </string>
    <string name="bahasa_paymentDetails">  Detil Pembayran</string>
    <string name="bahasa_transferDetails"> Detil Transfer </string>
    <string name="bahasa_purchaseDetails"> Detil Prabayar </string>
    <string name="bahasa_credit_AC_No"> Nomor Rekening Tujuan </string>
    <string name="bahasa_destnation_mdn">  Nomor Handphone Tujuan </string>
    <string name="bahasa_customerName"> Pemilik Rekening </string>
    <string name="bahasa_customerName_new"> Nama </string>
    <string name="bahasa_destinationBank"> Bank Tujuan </string>
    <string name="bahasa_destinationNumber"> Nomor Tujuan </string>
    <string name="bahasa_amount"> Jumlah </string>
    <string name="bahasa_mobileNumber"> Nomor Handphone </string>
    <string name="bahasa_mobileNumber_new">  Nomor HP </string>
    <string name="bahasa_otp"> OTP </string>
    <string name="bahasa_paymentCategory"> Kategori Pembayaran </string>
    <string name="bahasa_paymentType"> Jenis Pembayaran </string>
    <string name="bahasa_purchaseCategory"> Kategori Prabayar </string>
    <string name="bahasa_purchaseType"> Tipe Prabayar </string>
    <string name="bahasa_clickHereToResend"> Klik di sini untuk kirim ulang OTP </string>
    <string name="bahasa_simobiplus_exist">SimobiPlus terdapat di Handphone anda</string>
    <string name="bahasa_simobiplus_doesntexist">SimobiPlus tidak terdapat di Handphone anda</string>
    <string name="bahasa_register_now"> DAFTAR SEKARANG </string>
    <string name="bahasa_install_now"> PASANG SEKARANG </string>
    <string name="bahasa_changePin"> Ganti mPIN </string>
    <string name="bahasa_oldPin"> mPIN lama </string>
    <string name="bahasa_result"> Ringkasan </string>
    <string name="get_better_banking_experience_with_new_simobiplus">Get better banking experience with New SimobiPlus</string>
    <string name="payment_for_go_pay_insurance_transport_and_other_bill_payments">Payment for Go-Pay, insurance,transport and other bill payments</string>
    <string name="pay_by_qr_exp">Pay by QR, experience cashless and enjoy discounts</string>
    <string name="pay_creditcard">Pay credit card bills form all banks*</string>
    <string name="open_deposit">Open time deposit start from IDR 500.000 (7% interest)</string>
    <string name="termsandconditions">*Terms and conditions apply</string>
    <string name="upgrade_now">UPGRADE NOW</string>
    <string name="your_prev_details">Your details from previous Simobi account is safe</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="bahasa_enter_your_verification_code_otp">Kode verifikasi anda(OTP)</string>
    <string name="mdn">MDN</string>
</resources>