<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/page_upgrade_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/page_upgrade_style">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_upgrade"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/close_btn" />

        <ImageView
            android:id="@+id/logo_simplus"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:layout_below="@id/close_btn"
            android:src="@drawable/smbplus_hd" />

        <TextView
            android:id="@+id/label_upgrade"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo_simplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="1.5dp"
            android:text="@string/get_better_banking_experience_with_new_simobiplus"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/panelstore"
            android:layout_below="@id/label_upgrade"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/appstore_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="11dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/appstore_hd"
                android:contentDescription="@null" />

            <ImageButton
                android:id="@+id/playstore_btn"
                android:layout_width="109dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:background="@drawable/playstore_hd"
                android:contentDescription="@null" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/white"
            android:gravity="top"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/gopay_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/tick1"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:gravity="top"
                    android:src="@drawable/tick_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/payment_for_go_pay_insurance_transport_and_other_bill_payments" />

            </TableRow>

            <TableRow
                android:id="@+id/pbq_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/tick2"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:gravity="top"
                    android:src="@drawable/tick_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pay_by_qr_exp" />

            </TableRow>

            <TableRow
                android:id="@+id/paycredit_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/tick3"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:gravity="top"
                    android:src="@drawable/tick_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pay_creditcard" />

            </TableRow>

            <TableRow
                android:id="@+id/opentime_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/tick4"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:gravity="top"
                    android:src="@drawable/tick_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_deposit" />

            </TableRow>

            <TableRow
                android:id="@+id/tnc_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/tick5"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@null"
                    android:gravity="top"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/label_grey"
                    android:text="@string/termsandconditions" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/upgrade_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_upgrade_red"
            android:text="@string/upgrade_now"
            android:textColor="@color/white"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_prev_details" />

    </LinearLayout>


</LinearLayout>