<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_simobi"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@layout/rounded"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- <LinearLayout android:orientation="vertical" -->
            <!-- android:layout_width="fill_parent" android:layout_height="wrap_content" -->
            <!-- android:layout_marginLeft="10dp" -->
            <!-- android:layout_marginRight="10dp" android:layout_gravity="center" android:layout_marginTop="20dp"> -->

            <TextView
                android:id="@+id/textView2"
                style="@style/font_style_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dip"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:paddingRight="3dp"
                android:paddingEnd="3dp"
                android:text="@string/mdn"/>

            <EditText
                android:id="@+id/mobileEditText"
                style="@style/text_box_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="13"/>

            <TextView
                android:id="@+id/textView3"
                style="@style/font_style_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dip"
                android:paddingLeft="3dp"
                android:paddingStart="3dp"
                android:paddingRight="3dp"
                android:paddingEnd="3dp"
                android:text="@string/bahasa_enter_your_verification_code_otp"/>

            <EditText
                android:id="@+id/activationKeyEditText"
                style="@style/text_box_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="numberPassword"
                android:maxLength="8" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/resendOTP"
                    style="@style/font_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_empty"
                    android:padding="2dp"
                    android:text="@string/resend_otp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/okButton"
                    style="@style/font_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_empty"
                    android:padding="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <!-- </LinearLayout> -->


    <!-- <FrameLayout android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" android:layout_gravity="bottom" android:visibility="invisible"> -->
    <!-- <Button android:layout_height="wrap_content" android:id="@+id/okButton" -->
    <!-- android:background="@drawable/ok_btn_hover" android:layout_width="wrap_content" -->
    <!-- android:layout_gravity="center_horizontal"></Button> -->
    <!-- <Button android:layout_height="wrap_content" -->
    <!-- android:layout_gravity="right" android:layout_marginRight="10dp" -->
    <!-- android:id="@+id/backButton" android:background="@drawable/cancel_btn_hover" -->
    <!-- android:layout_width="wrap_content" android:visibility="invisible"></Button> -->
    <!-- </FrameLayout> -->

    <include
        android:id="@+id/header"
        layout="@layout/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>